# job-satisfaction-analysis

./: .gitignore  README.md  job_satisfaction_modeling.ipynb  pyproject.toml
data/metadata/: data_dictionary.csv  variables_info.csv
models/: best_model.pkl
notebooks/: 01_data_cleaning.ipynb  01_preprocessing_and_integrated_eda.ipynb  02_eda.ipynb  02_modelling.ipynb  03_advanced_analysis.ipynb  03_modelling.ipynb  04_advanced_analysis.ipynb
utils/: config.py  data_io.py  data_loading.py  evaluation.py  helpers.py  model_evaluation.py  notebook_setup.py  viz_style.py
