[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "job-satisfaction-analysis"
version = "0.1.0"
description = "Analysis of job satisfaction factors"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "pyreadstat",
    "statsmodels",
    "matplotlib",
    "seaborn",           
    "scikit-learn",
    "xgboost",
    "shap",      
    "jupyter",           
    "ipykernel"
]

[tool.setuptools.packages.find]
where = ["."]

include = ["ml_core_utils*"]